removed class names in buttons

--- a/src/index.html
+++ b/src/index.html
@@ -173,7 +173,7 @@
             <!-- Features Dropdown -->
             <button
               id="dropdownButton"
-              class="dropdown-button flex flex-col relative items-start text-MediumGray ease-in duration-200 hover:scale-110 justify-between mb-2 gap-2 hover:cursor-pointer"
+              class="flex flex-col relative items-start text-MediumGray ease-in duration-200 hover:scale-110 justify-between mb-2 gap-2 hover:cursor-pointer"
             >
               <div class="flex items-center gap-2">
                 <span class="pointer-events-none">Features</span>
@@ -216,7 +216,7 @@
             <!-- Company Dropdown -->
             <button
               id="companyDropdownButton"
-              class="dropdown-button flex flex-col relative items-start text-MediumGray ease-in duration-200 hover:scale-110 justify-between mb-2 gap-2 hover:cursor-pointer"
+              class="flex flex-col relative items-start text-MediumGray ease-in duration-200 hover:scale-110 justify-between mb-2 gap-2 hover:cursor-pointer"
             >
               <div class="flex items-center gap-2">
                 <span>Company</span>
@@ -313,20 +313,12 @@
         >
           Learn more
         </button>
-        <div class="flex gap-6 lg:gap-8 px-4 pt-20 lg:pt-28">
-          <a class="cursor-pointer" href="#"
-            ><img src="images/client-databiz.svg" alt=""
-          /></a>
-          <a class="cursor-pointer" href="#"
-            ><img src="images/client-audiophile.svg" alt=""
-          /></a>
-          <a class="cursor-pointer" href="#"
-            ><img src="images/client-meet.svg" alt=""
-          /></a>
-          <a class="cursor-pointer" href="#"
-            ><img src="images/client-maker.svg" alt=""
-          /></a>
-        </div>
+        <ul class="flex gap-6 lg:gap-8 px-4 pt-20 lg:pt-28">
+          <li><img src="images/client-databiz.svg" alt="" /></li>
+          <li><img src="images/client-audiophile.svg" alt="" /></li>
+          <li><img src="images/client-meet.svg" alt="" /></li>
+          <li><img src="images/client-maker.svg" alt="" /></li>
+        </ul>
       </section>
     </main>
 
