made ids unique for buttons

--- a/src/index.html
+++ b/src/index.html
@@ -96,7 +96,7 @@
             <!-- Company Dropdown -->
             <button
               id="companyDropdownButton"
-              class="dropdown-button flex relative items-center text-MediumGray hover:text-AlmostBlack ease-in duration-200 hover:scale-110 justify-between mb-2 gap-2 hover:cursor-pointer"
+              class="flex relative items-center text-MediumGray hover:text-AlmostBlack ease-in duration-200 hover:scale-110 justify-between mb-2 gap-2 hover:cursor-pointer"
             >
               <span>Company</span>
               <img
@@ -172,7 +172,7 @@
           >
             <!-- Features Dropdown -->
             <button
-              id="dropdownButton"
+              id="hamburgerDropdownButton"
               class="flex flex-col relative items-start text-MediumGray ease-in duration-200 hover:scale-110 justify-between mb-2 gap-2 hover:cursor-pointer"
             >
               <div class="flex items-center gap-2">
