changed overall width

--- a/src/index.html
+++ b/src/index.html
@@ -140,14 +140,14 @@
             >
           </nav>
         </div>
-        <div class="hidden md:flex gap-6 absolute right-10">
+        <div class="hidden md:flex gap-9 absolute right-10">
           <button
             class="py-2 w-full ease-in duration-200 hover:scale-110 text-MediumGray hover:text-AlmostBlack"
           >
             Login
           </button>
           <button
-            class="border-2 text-MediumGray hover:text-AlmostBlack border-MediumGray hover:border-AlmostBlack rounded-2xl py-2 px-6"
+            class="border-2 text-MediumGray hover:text-AlmostBlack border-MediumGray hover:border-AlmostBlack rounded-2xl py-2 px-5"
           >
             Register
           </button>
@@ -215,7 +215,7 @@
             </button>
             <!-- Company Dropdown -->
             <button
-              id="companyDropdownButton"
+              id="hamburgerCompanyDropdownButton"
               class="flex flex-col relative items-start text-MediumGray ease-in duration-200 hover:scale-110 justify-between mb-2 gap-2 hover:cursor-pointer"
             >
               <div class="flex items-center gap-2">
@@ -278,7 +278,7 @@
 
     <!-- Main content -->
     <main
-      class="max-w-[1240px] flex flex-col justify-center items-center lg:flex-row-reverse lg:justify-between lg:px-10 md:pt-10 mx-auto lg:gap-32 lg:items-start"
+      class="max-w-[1240px] flex flex-col justify-center items-center lg:flex-row-reverse lg:justify-between lg:px-10 md:pt-10 mx-auto lg:gap-16 lg:items-start"
     >
       <picture>
         <img class="lg:hidden" src="images/image-hero-mobile.png" alt="" />
@@ -301,7 +301,7 @@
             Make <span class="pl-2 lg:pl-0"> remote work</span>
           </h1>
           <p
-            class="text-MediumGray text-lg text-center lg:text-start lg:pr-24 font-semibold"
+            class="text-MediumGray text-lg text-center lg:text-start lg:pr-36 font-semibold"
           >
             Get your team in sync, no matter your location. Streamline
             processes, create team rituals, and watch productivity soar.
